Check also property type names

At the moment, qmllint only check the types of objects and classes
being imported, it totally ignored types of properties that should be
also imported.

Fixes: QTBUG-92449
Change-Id: Ia5173bed84640d93fc48f6239179604ceb5db2cd
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>