src/qmlcompiler/qqmljsimportvisitor_p.h
@@ -148,6 +148,7 @@ private:
     void resolveAliases();
     void visitFunctionExpressionHelper(QQmlJS::AST::FunctionExpression *fexpr);
     void processImportWarnings(const QString &what, const QQmlJS::SourceLocation &srcLocation = QQmlJS::SourceLocation());
+    void addImportWithLocation(const QString &name, const QQmlJS::SourceLocation &loc);
 };
 
 QT_END_NAMESPACE
