tests/auto/qml/qmllint/data/used.qml
@@ -2,6 +2,7 @@ import QtQml as Qml
 import QtQuick as Quick
 import QtQuick 2.0 as QuickLegacy
 import QtQuick
+import Things
 
 Item {
     property var bar: Qml.QtObject {}
@@ -9,4 +10,7 @@ Item {
         property var foo: Quick.Screen.pixelDensity
         property var foo2: parent.QuickLegacy.Screen.pixelDensity
     }
+    required property Something moo
+    property bool boolVar: false
+    property real realVar: 17.17
 }
